# recorder-solidjs-rust

./: README.md
BE/: Cargo.toml
BE/src/: main.rs
BE/src/cert/: cert.pem  cert1.pem  fullchain1.pem  key.rsa  privkey1.pem
FE/: package-lock.json
FE/src/: App.module.css  App.tsx  RecordingScreen.tsx  index.css
FE/src/assets/css/: buttons.css
FE/src/utils/: index.tsx
