[package]
name = "media-stream-upload"
version = "0.1.0"
edition = "2018"
publish = false


[features]
tls-rustls = ["rustls", "rustls-pemfile"]


[dependencies]
futures = "0.3"
axum = { version = "0.5.9", features = ["ws", "headers","multipart","headers"] }
axum-server = { version =  "0.4.0", features=["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace", "cors"] }
headers = "0.3"
askama = "0.11"
async-trait = "0.1.51"
async-stream = "0.3.2"
clap = "2.33.2"
rustls = { version = "0.20", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1", optional = true }